--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<td class="panelOne">
 					<h2>Instructions</h2>
 					<p>Oh no! The Special Prosecutor thinks that Trump may have committed a crime.</p>
-					<p> You are a detective assigned the case. You have ten guesses to figure out the letters in Trump's email password. Each email account you crack will lengthen his sentence.</p>
+					<p> You are a detective assigned the case. Press a key to guess a letter in Trump's email password. Guess them all and Trump gets another year on his sentence. Guess wrong three times and Trump deletes that account.</p>
 					<p> Good luck-- the country is counting on you.</p>
 				</td>
 
@@ -72,7 +72,7 @@
 
 
 
-<script src="assets/javascript/game.js"></script>
+<script src="assets/javascript/game2.js"></script>
 
 	
 </body>
