working on updating letter blanks, still malfunctioning

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						</tr>
 						<tr>
 							<td class="gameRow">
-								<p id="blanks"></p>
+								<p id="blanksContainer"></p>
 								<p class="blank">Guesses Remaining: <span>10</span></p>
 							</td>
 						</tr>
